--- a/app/src/main/res/layout/activity_left_menu.xml
+++ b/app/src/main/res/layout/activity_left_menu.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="left"
     android:layout_marginLeft="20dp"
-    android:background="@color/white"
+    android:background="@drawable/background"
     android:orientation="vertical">
 
     <LinearLayout
