--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="80dp"
     android:orientation="horizontal"
@@ -8,7 +9,7 @@
     <ImageView
         android:id="@+id/d_ivAlbum"
         android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_height="45dp"
         android:layout_marginLeft="20dp"
         android:src="@drawable/apple"/>
 
@@ -45,6 +46,13 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="20dp">
 
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginRight="5dp"
+            android:src="@drawable/ic_duration"/>
+
+
         <TextView
             android:id="@+id/d_tvDuration"
             android:layout_width="wrap_content"
@@ -52,6 +60,5 @@
             android:text="4:40"
             android:textSize="14sp" />
     </LinearLayout>
-
 
 </LinearLayout>
