--- a/app/src/main/res/layout/activity_diary.xml
+++ b/app/src/main/res/layout/activity_diary.xml
@@ -23,13 +23,22 @@
         android:layout_weight="1"
         android:hint="입력하세요"
         android:background="#FBE1E3"
+        android:layout_marginBottom="10dp"
         android:lines="20"/>
 
     <Button
         android:id="@+id/btnMode"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:enabled="false"
+        android:layout_weight="1"
         android:text="일기 저장"
-        android:enabled="false"/>
+        app:backgroundTint="#F69AB9" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_marginTop="10dp" />
 
 </LinearLayout>
